--- a/app/customer.html
+++ b/app/customer.html
@@ -40,7 +40,7 @@
 <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
 <script src="bower_components/ocanvas/index.js"></script>
-<script src="bower_components/braintree-web/dist/braintree.js"></script>
+<script src="bower_components/braintree-web-drop-in/dropin.js"></script>
 <script src="components/progressInterceptor/progressInterceptor.js"></script>
 <script src="customer.app.js"></script>
 <script src="customer.config/config.js"></script>
@@ -56,6 +56,7 @@
 <script src="customer.events/customer.events.js"></script>
 <script src="customer.event/customer.event.js"></script>
 <script src="customer.block/customer.block.js"></script>
+<script src="customer.basket/customer.basket.js"></script>
 <script src="customer.checkout/customer.checkout.js"></script>
 <script src="customer.checkout.summary/customer.checkout.summary.js"></script>
 <script src="customer.purchase/customer.purchase.js"></script>
